# RunestoneServer

./: .coveralls.yml  .dockerignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .jshintrc  .prettierignore  .prettierrc.js  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  ChangeLog.rst  Dockerfile  LICENSE  Makefile  Pipfile  README.rst  README_dev_setup.rst  README_new_book.rst  VERSION  codechat_config.json  codechat_config.yaml  conf.py  config.py  databases.tbz  docker-compose.yml  index.rst  inst  lti.config  makeRelease.sh  minifyjs.py  pavement.py  paverconfig.py.prototype  pylintrc  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-rtd.txt  (+4 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: python-app.yml  stale.yml
books/: .gitignore
books/common/: README.rst
books/modules/: MANIFEST.in  oauth.py  oauth_store.py  requirements.txt  setup.py
books/newproject_copy_me/: conf.py
books/overview/: conf.py  index.rst  instructor.rst  overview.rst  pavement.py
books/pip/: conf.py  session_codes.py
books/pip2/: pavement.py  session_codes.txt
books/pythonds/: conf.py  index.rst  pavement.py  split.py  template_conf.py
books/thinkcspy/: README.rst  conf.py  pavement.py  template_conf.py
common/css/: activecode.css  codemirror.css  merge.css  poll.css  tabbedstuff.css  user-highlights.css
common/js/: activecode.js  assess.js  bookfuncs.js  guiders-1.3.0.js  inlineDisqussions.js  jquery-fix.js  jquery.hotkey.js  navhelp.js  parsons-noconflict.js  poll.js  rangy-core.js  simplemodal.js  user-highlights.js
controllers/: admin.py  ajax.py  appadmin.py  assignments.py  books.py  coach.py  dashboard.py  default.py  designer.py  everyday.py  exams.py  feed.py  lti.py  myform.py  mygroup.py  oauth.py  peer.py  practice.py  proxy.py  remakeofmyform.py  sections.py  toctree.rst
devcourse/: conf.py  index.rst  pavement.py
doc/: architecture.rst  conf.py  index.rst
docker/: .env.prototype  README.md  README.rst  __init__.py  compose.env  docker_gui.py  docker_tools.py  docker_tools_misc.py  entrypoint.sh  nginx.conf  routes.py  runguard-install.py  setup.py  toctree.rst  uwsgi-emperor.conf  uwsgi.ini  web2py.xml  wsgihandler.py
docker/gunicorn/: fastapi.conf.py  gunicorn.conf.py  web2py.conf.py
docker/gunicorn_config/: __init__.py  common_config.py  fastapi_config.py  toctree.rst  web2py_config.py
docker/runguard/: runguard-config.h  runguard.c
docs/: installation.rst  lti.rst  lti_selfhost.rst
everyday/: .tm_properties  conf.py  index.rst  latest.txt  pavement.py
everyday/_templates/: page.html
jobeinabox/: Dockerfile
jobeinabox/files/: CodeTestHelper.java
jobeinabox/include/: CImg.h  CTurtle.hpp
languages/: pt-br.py
models/: 0.py  1.py.prototype  db.py  db_dashboard.py  db_ebook.py  db_ebook_chapters.py  db_ebook_groups.py  db_sections.py  grouped_assignments.py  helper.py  lti.py  menu.py  modulesmodel.py  pip.py  practice.py  questions.py  scheduler.py  team.py  textbooks.py  toctree.rst  user_biography.py
modules/: .gitignore  __init__.py  chapternames.py  common_builder.py  db_dashboard.py  feedback.py  oauth.py  outcome_request.py  outcome_response.py  pytsugi_utils.py  questions_report.py  rs_grading.py  rs_practice.py  scheduled_builder.py  stripe_form.py
newproject_copy_me/: Readme.txt  conf.py  index.rst  pavement.py
overview/: conf.py  index.rst  instructor.rst  overview.rst  pavement.py
pip/: conf.py  index.rst  pavement.py
pip2/: index.rst  pavement.py  split.py  template_conf.py
private/: README.rst
production/: README.rst  docker-compose.yml  env.template  load_balancer_default
pythonds/: allChapterFiles.txt  assignments.rst  chapterNames.py  conf.py  index.rst  pavement.py
rsmanage/: __init__.py  fill_practice_log_missings.py  grade.py  initialize_tables.py  makeuser.py  migrate.py  noop.py  rsmanage.py  rsmanager.py  setup.py  toctree.rst
runestone/: __init__.py  model.py
runestone_poetry_project/: __init__.py  docker_tools_launch.py  make_dev_pyproject.py  poetry_fix.py  poetry_fix_diagram.vsdx
scripts/: active_users.py  buildPageViews.py  build_preview.sh  chapternames.py  checkHeartbeat.py  cleanup_courses.py  crawl_sitemap.py  createMchoiceGrades.py  currentTraffic.py  daddcourse  database_pruning.py  dbtimes.py  dbuild  ddb  dmanage  dshell  dtest  dump_trace.py  find_modified_index.py  getLoad.sh  grep_logs.py  install_new_image.sh  loadTimes.py  loadtest.py  log2csv.py  logging.conf  makeMongoTest.py  make_dev_pyproject.py  make_new_production.sh  make_script_tags.py  make_sitemap.py  migrateLibrary.py  minifyjs.py  monitor_log.py  nightlytransfer.py  numberFigs.py  parseLog.py  parse_tickets.py  populateDivTable.py  populate_lib.py  (+13 more)
source/: AlgorithmAnalysis\intro-AlgorithmAnalysis.rst  BasicDS\intro-BasicDataStructures.rst  Graphs\intro-Graphs.rst  Introduction\intro-Introduction.rst  SortSearch\intro-SearchingandSorting.rst  SortSearch\intro-SortingandSearching.rst  Trees\intro-Trees.rst  allChapterFiles.txt  conf.py  navhelp.rst  navhelp.rst.old  toc.rst
static/: bootstrap-sphinx.css  dashboard-charts.js  dashboard.css  motd.html  runestone-custom-sphinx-bootstrap.css
test/: README.rst  register.py  run_tests.py  test_activecodes.py  test_assess.py  test_auth.py  test_dom_access.py  test_layout.py  test_poll.py  test_reveals.py  testdoc.rst  webtests-chrome.py  webtests.py
tests/: .coveragerc  README.md  README.rst  __init__.py  ci_utils.py  conftest.py  locustfile.py  make_clean_db_with_grades.py  run_tests.py  run_tests.sh  runestone_clean.sql  server_test.py  test_admin.py  test_ajax.py  test_ajax2.py  test_assignments.py  test_autograder.py  test_dashboard.py  test_designer.py  test_formatting.py  test_runestone_components.py  test_server.py  test_team.py  utils.py
thinkcspy/: allChapterFiles.txt  chapterNames.py  conf.py  index.rst  pavement.py  split.py
views/: __init__.py  _qeditor.html  _sphinx_static_files.html  generic.csv  groupLayout.html  layout.html  layout.html.old
(+2015 files in other folders)
